[package]
name = "rad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version="1.33", features=[
  "rt-multi-thread",
  "net",
  "fs",
  "process",
  "io-std",
  "io-util",
  "macros"
] }
tokio-util = { version="0.7", features=["codec"] }
futures = "0.3"
bytes = "1.5"
lsp-types = "0.94.1"
lsp-server = "0.7.4"
serde = { version="1.0", features=["derive"]}
serde_json = "1.0"
resolve-path = "0.1"
triomphe = "0.1.9"
fxhash = "0.2"
# log
tracing = "0.1"
tracing-subscriber = "0.3"
